# playground

./: .gitignore  Binary.hs  Bracket.hs  FizzBuzzDSL.hs  Script.hs  flake.nix
Computers/: Computers.hs  Gates.hs  Nat.hs  Zipper.hs
PLT/: Eval.hs  LCParser2.hs  LambdaCalcParser.hs  LambdaCalcPlayground.hs  MyULC.hs  MyULCPlayground.hs  STLC.hs  ULC.hs  ULCPlayground.hs
brainfuck-emulator/: app.cabal  cabal.project
brainfuck-emulator/app/: BrainFuck.hs  Emulator.hs  Main.hs  Style.hs
brainfuck-emulator/app/Data/List/Zipper/: Extended.hs
chat/: chat.cabal
chat/app/chat-client/: Main.hs
chat/src/: Client.hs  Core.hs  Server.hs  ServerMessage.hs
chat/src/Brick/Widgets/List/: Extended.hs
ci-server/: ci-server.cabal
ci-server/src/: Agent.hs  Cli.hs  Core.hs  Docker.hs  GitHub.hs  JobHandler.hs  Runner.hs  Server.hs  Socket.hs
ci-server/src/JobHandler/: Memory.hs
ci-server/test/: Main.hs  github-payload.sample.json
erlang/: atoi.erl  upper.erl
errorHandling/: build.sbt
errorHandling/haskell/: ErrorHandling.cabal
errorHandling/haskell/src/: Either.hs  MonadError.hs  MonadThrow.hs  Validate.hs
errorHandling/haskell/test/: Main.hs  MonadThrowSuite.hs  ValidateSuite.hs
errorHandling/scala/: build.sbt
errorHandling/scala/src/main/scala/: Either.scala  EitherT.scala  MonadError.scala  MonadThrow.scala  Validated.scala
errorHandling/scala/src/test/scala/: MonadError.scala  MonadThrow.scala
errorHandling/src/main/scala/: Either.worksheet.sc  EitherT.worksheet.sc  MonadError.worksheet.sc  MonadThrow.worksheet.sc  Validated.worksheet.sc
haskell/: .gitignore  haskell.cabal  package.yaml  stack.yaml
haskell-games/: README.md  flake.nix  haskell-games.cabal
haskell-games/src/: GuessTheNumber.hs  Hangman.hs  Minesweeper.hs  RockPaperScissors.hs  TicTacToe.hs  TicTacTui.hs
haskell-games/src/Minesweeper/: Game.hs  Grid.hs
haskell-games/src/Snake/: Main.hs  Snake.hs
haskell-games/src/SpaceInvader/: Core.hs  UI.hs
haskell-games/src/Sudoku/: Main.hs  Sudoku.hs
haskell-games/test/: GridSpec.hs  GuessTheNumberSpec.hs  Main.hs  SnakeSpec.hs
haskell/apps/: Replace.hs
haskell/src/: Alternative.hs  Arrow.hs  Binary.hs  Bracket.hs  CellularAutomata.hs  ContravariantFunctor.hs  DTO.hs  Database.hs  FizzBuzzDSL.hs  FoldsCompared.hs  FreeMonad.hs  GameOfLife.hs  HigherKindedTypes.hs  JSON.hs  Mandelbrot.hs  MonadTrans.hs  Onion.hs  OnionWeb.hs  Persistence.hs  QuickSort.hs  Streaming.hs  Strictness.hs  TransVsMTL.hs
haskell/src/Algebra/: BoolMonoids.hs  KleisliEndo.hs  MonadPlus.hs
haskell/src/Algorithms/: Basics.hs  ConstraintSolving.hs  QuickSort.hs
haskell/src/Algorithms/DP/: Fibo.hs  Levenstein.hs
haskell/src/Architecture/: PureTime.hs  RegistrationFlowIO.hs  RegistrationFlowState.hs
haskell/src/Architecture/MusicRecommender/: Handle.hs
haskell/src/Concurrency/: BankAccount.hs  Cache.hs  ConcBasics.hs
haskell/src/DataStructures/: Grid.hs  Zipper.hs
haskell/src/MTL/: MTL.hs
haskell/src/Mocking/: DependencyInjection.hs  Fake.hs  FunctionalMocking.hs  Mock.hs  MockFS.hs  UnitTesting.hs  UnitTestingDirectInstances.hs  UnitTestingRecordInstances.hs
haskell/src/Networking/: ChatServer.hs  EchoServer.hs
haskell/src/Testing/: StateBasedTesting.hs
haskell/src/TypelevelStuff/: GADT.hs  OpaqueTypes.hs  PhantomTypes.hs  TypeclassVsRecord.hs
imageboard/: .gitignore  config.yaml  db.sqlite  flake.nix  imageboard.cabal
imageboard/app/: Main.hs
imageboard/assets/: style.css
imageboard/src/: Database.hs  Image.hs  Imageboard.hs  Logger.hs  Web.hs
imageboard/src/Data/Either/: Fail.hs
imageboard/src/Imageboard/: Database.hs  Logger.hs  Main.hs  Web.hs
imageboard/src/Web/: View.hs
irc-server/: irc-server.cabal
irc-server/app/: Main.hs
irc-server/src/: ClientMsg.hs  IRCServer.hs  ServerMsg.hs  Types.hs  UserService.hs
mandelbrot/: README.md  flake.nix  mandelbrot.cabal
mandelbrot/app/: Main.hs
mandelbrot/src/: Mandelbrot.hs
miso-experiments/: app.cabal  cabal.project  flake.nix
miso-experiments/app/: Main.hs
miso-experiments/src/: Chess.hs  Grid.hs  Life.hs  Snake.hs  TicTacToe.hs  Todo.hs
miso-life/: Makefile  app.cabal  cabal.project  flake.nix
miso-life/app/: Main.hs
miso-life/src/: Grid.hs  Life.hs  Zipper.hs
node-concurrency/: conc.js
racket/: stuff.rkt
rust/src/: main.rs
scala/: .gitignore  build.sbt  flake.nix
scala/src/main/scala/: Laziness.worksheet.sc  OnionArchitecture.worksheet.sc  scratch.worksheet.sc
scala/src/main/scala/errors/: eitherT.worksheet.sc  ioBased.worksheet.sc  ioEither.worksheet.sc  pure.worksheet.sc
stack/: stack.py  stack.scm
textboard/: .gitignore  build.sbt  flake.nix
textboard/project/: plugins.sbt
textboard/src/main/scala/home/textboard/: HelloWorld.scala  Jokes.scala  Main.scala  Post.scala  PostRepo.scala  Posting.scala  Posts.scala  Routes.scala  TextboardRoutes.scala  TextboardServer.scala  Threads.scala
textboard/src/test/scala/home/textboard/: HelloWorldSpec.scala
textboard/web/src/: Main.elm
understanding-data-abstraction-revisited/: ADT.hs  Object.hs
unix-tools/: flake.nix  unix-tools.cabal
unix-tools/hcat/: Main.hs
unix-tools/hless/: Main.hs
unix-tools/src/: FilePack.hs  HCat.hs  HLess.hs  Metrics.hs  Utils.hs
zero-bullshit-exercises/: .gitignore  package.yaml  stack.yaml  zero-bullshit-exercises.cabal
zero-bullshit-exercises/src/: Exercises.hs  Server.hs
