cabal-version:      3.0
name:               bf-emulator
version:            0.1.0.0
author:             ben
category:           Web
build-type:         Simple

flag interactive
  default:
    False
  manual:
    True

common warnings
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

common options
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM
    if flag (interactive)
      cpp-options:
        -DINTERACTIVE

  if arch(javascript)
     ld-options:
       -sEXPORTED_RUNTIME_METHODS=HEAP8

executable app
  import:
    options, warnings
  main-is:
    Main.hs
  other-modules:
    Emulator
    Style
    BrainFuck
    Data.List.Zipper.Extended
  build-depends: 
    base < 5,
    miso >= 1.9,
    -- brainfuck-interpreter,
    ListZipper,
    bytestring,
    mtl,
    text
  hs-source-dirs:
    app
  default-language:
    Haskell2010
