cabal-version:   3.0
name:            chat
version:         0.1.0.0
license:         GPL-3.0-only
license-file:    LICENSE
author:          Ben
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Client
    Server

  build-depends:
    , base
    , brick
    , network
    , protolude
    , vector
    , vty
    , vty-unix

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards

executable server
  import:           warnings
  ghc-options:      -O1 -threaded -rtsopts -with-rtsopts=-N
  main-is:          Main.hs
  build-depends:
    , base
    , chat

  hs-source-dirs:   app/chat-server
  default-language: Haskell2010

executable client
  import:           warnings
  ghc-options:      -O1 -threaded -rtsopts -with-rtsopts=-N
  main-is:          Main.hs
  build-depends:
    , base
    , chat

  hs-source-dirs:   app/chat-client
  default-language: Haskell2010

-- test-suite chat-test
--   import:           warnings
--   default-language: Haskell2010
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   test
--   main-is:          Main.hs
--   build-depends:
--     , base
--     , chat
