cabal-version: 3.0

name:           haskell-games
version:        0.0.0
build-type:     Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
  import:           warnings
  exposed-modules:
    GuessTheNumber
  ghc-options: -Wall
  hs-source-dirs:
    src
  default-extensions:
    DeriveFunctor
    ConstraintKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedRecordDot
  build-depends:
      base
    , bytestring
    , containers
    , exceptions
    , haskeline
    , monad-loops
    , mtl
    , random
    , text
  default-language: Haskell2010

test-suite haskell-games-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base
      , hspec
      , QuickCheck
      , haskell-games
    default-extensions:
        DeriveFunctor
      , OverloadedRecordDot
      , BlockArguments
      , DeriveAnyClass
      , DeriveGeneric
      , LambdaCase
      , OverloadedStrings
      , StrictData
