cabal-version: 3.0

name:           haskell-games
version:        0.0.0
build-type:     Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
  import:           warnings
  exposed-modules:
      TicTacTui
    , TicTacToe
    , RockPaperScissors
    , GuessTheNumber
  ghc-options: -Wall
  hs-source-dirs:
    src
  default-extensions:
    DeriveFunctor
    ConstraintKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedRecordDot
  build-depends:
      base
    , brick
    , bytestring
    , containers
    , exceptions
    , haskeline
    , microlens
    , microlens-th
    , microlens-mtl
    , monad-loops
    , mtl
    , split
    , random
    , text
    , vty
  default-language: Haskell2010

test-suite haskell-games-test
    import:           warnings
    other-modules:
      GuessTheNumberSpec
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base
      , hspec
      , QuickCheck
      , haskell-games
      , mtl
    default-extensions:
        DeriveFunctor
      , OverloadedRecordDot
      , BlockArguments
      , DeriveAnyClass
      , DeriveGeneric
      , LambdaCase
      , OverloadedStrings
      , StrictData
