cabal-version: 3.0
name:          haskell-games
version:       0.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall -Wno-name-shadowing

library
  import:             warnings
  exposed-modules:
    Snake.Main
    Snake.Snake
    Minesweeper.Game
    Minesweeper.Grid
    GuessTheNumber
    Hangman
    RockPaperScissors
    TicTacToe
    TicTacTui

  hs-source-dirs:     src
  default-extensions:
    ConstraintKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedRecordDot

  build-depends:
    , aeson
    , array
    , base
    , brick
    , bytestring
    , containers
    , exceptions
    , haskeline
    , linear
    , microlens
    , microlens-mtl
    , microlens-th
    , monad-loops
    , mtl
    , nonempty-containers
    , random
    , req
    , split
    , text
    , vector
    , vty
    , vty-unix

  default-language:   Haskell2010

test-suite haskell-games-test
  import:             warnings
  other-modules:
    GridSpec
    GuessTheNumberSpec
    SnakeSpec

  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , base
    , haskell-games
    , hspec
    , mtl
    , QuickCheck

  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    StrictData
