cabal-version: 1.12

name:           haskell
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      Scratch
    , Interview
    , JSON
    , DTO
    , Architecture.RegistrationFlowIO
    , Architecture.RegistrationFlowState
    , Algebra.BoolMonoids
    , Algebra.MonadPlus
    , Algebra.KleisliEndo
    , Algorithms.Basics
    , Algorithms.QuickSort
    , Algorithms.DP.Fibo
    , Algorithms.DP.Levenstein
    , Algorithms.ConstraintSolving
    , Arrow
    , Bracket
    , CellularAutomata
    , Concurrency.ConcBasics
    , Concurrency.Cache
    , Concurrency.BankAccount
    , ContravariantFunctor
    , DataStructures.Grid
    , DataStructures.Zipper
    , FoldsCompared
    , GameOfLife
    , MonadTrans
    , Networking.EchoServer
    , Networking.ChatServer
    , Onion
    , OnionWeb
    , TransVsMTL
    , TypelevelStuff.OpaqueTypes
    , TypelevelStuff.PhantomTypes
    , TypelevelStuff.TypeclassVsRecord
  ghc-options: -Wall
  hs-source-dirs:
    src
  default-extensions:
    DeriveFunctor
    ConstraintKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
  build-depends:
      ansi-terminal
    , aeson
    , async
    , base
    , bytestring
    , comonad
    , containers
    , concurrency
    , exceptions
    , either
    , free
    , hedis
    , hspec
    , lifted-async
    , managed
    , network
    , monad-loops
    , mtl
    , optparse-applicative
    , parsec
    , QuickCheck
    , random
    , rio
    , scotty
    , sqlite-simple
    , stm
    , tasty
    , text
    , time
    , transformers
    , criterion
    , array
    , vector
  default-language: Haskell2010
