cabal-version: 3.4
name:          haskell
version:       0.0.0
build-type:    Simple

executable replace
  main-is:        Replace.hs
  ghc-options:    -O1 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: apps
  build-depends:
    , base
    , text

library
  exposed-modules:
    Scratch
    Algebra.BoolMonoids
    Algebra.KleisliEndo
    Algebra.MonadPlus
    Algorithms.Basics
    Algorithms.ConstraintSolving
    Algorithms.DP.Fibo
    Algorithms.DP.Levenstein
    Algorithms.QuickSort
    Architecture.RegistrationFlowIO
    Architecture.RegistrationFlowState
    Arrow
    Bracket
    CellularAutomata
    Concurrency.BankAccount
    Concurrency.Cache
    Concurrency.ConcBasics
    ContravariantFunctor
    DataStructures.Grid
    DataStructures.Zipper
    DTO
    FoldsCompared
    GameOfLife
    JSON
    MonadTrans
    Networking.ChatServer
    Networking.EchoServer
    Onion
    OnionWeb
    Persistence
    Streaming
    TransVsMTL
    TypelevelStuff.OpaqueTypes
    TypelevelStuff.PhantomTypes
    TypelevelStuff.TypeclassVsRecord

  ghc-options:        -O1 -Wall
  hs-source-dirs:     src
  default-extensions:
    ConstraintKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

  build-depends:
    , aeson
    , ansi-terminal
    , array
    , async
    , base
    , bytestring
    , comonad
    , concurrency
    , conduit
    , containers
    , criterion
    , directory
    , either
    , exceptions
    , free
    , hedis
    , hspec
    , lifted-async
    , managed
    , monad-loops
    , mtl
    , network
    , optparse-applicative
    , parsec
    , QuickCheck
    , random
    , rio
    , scotty
    , sqlite-simple
    , stm
    , tasty
    , text
    , time
    , transformers
    , vector

  default-language:   Haskell2010
