cabal-version: 3.4
name:          imageboard
version:       0.1.0.0

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:
    Database
    Logger
    Imageboard
    Web
    Paths_imageboard

  build-depends:
    , aeson
    , async
    , base
    , base64-bytestring
    , binary
    , bytestring
    , directory
    , exceptions
    , fast-logger
    , filelock
    , filepath
    , lens
    , lifted-base
    , lucid2
    , mbox
    , http-types
    , mtl
    , multipart
    , random
    , resource-pool
    , scotty
    , sqlite-simple
    , text
    , time
    , uuid
    , xss-sanitize
    , yaml

executable imageboard
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    , base
    , imageboard
