cabal-version: 3.4
name:          imageboard
version:       0.1.0.0

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:
    Database
    Imageboard
    Logger
    Paths_imageboard
    Web
    Web.View

  build-depends:
    , aeson
    , base
    , bytestring
    , directory
    , http-types
    , JuicyPixels-extra
    , JuicyPixels
    , lens
    , lucid2
    , mtl
    , multipart
    , random
    , scotty
    , sqlite-simple
    , text
    , time
    , wai-extra
    , yaml

executable imageboard
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    , base
    , imageboard
