cabal-version:   3.0
name:            irc-server
version:         0.1.0.0
license:         GPL-3.0-only
license-file:    LICENSE
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: 
        IRCServer
      , ClientMsg
      , ServerMsg
      , Types
    build-depends:    
        base ^>=4.20.2.0
      , stm
      , monad-loops
      , network
      , parsec
      , bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

executable irc-server
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0
      , irc-server
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite irc-server-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0
      , irc-server
      , hspec
      , QuickCheck
