cabal-version:   3.4
name:            mandelbrot
version:         0.1.0.0
license:         GPL-3.0-only
license-file:    LICENSE
author:          Ben
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Mandelbrot
  build-depends:
    , base
    , brick
    , split
    , terminal-size
    , vty

  hs-source-dirs:   src
  default-language: Haskell2010

executable mandelbrot
  import:           warnings
  ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is:          Main.hs
  build-depends:
    , base
    , mandelbrot

  hs-source-dirs:   app
  default-language: Haskell2010
