cabal-version:      3.0
name:               miso-experiments
version:            0.1.0.0
build-type:         Simple

common warnings
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

library
  import:
    warnings
  exposed-modules:
      Life
    , Snake
    , Todo
    , TicTacToe
    , Chess
  build-depends:
      base < 5
    , my-tools
    , miso
    , comonad
    , containers
    , random
    , jsaddle
    , time
    , aeson
  hs-source-dirs:
    src
  default-extensions: DeriveFunctor
  default-language:
    Haskell2010

executable app
  import:
    warnings
  main-is:
    Main.hs
  build-depends:
      base < 5
    , miso
    , miso-experiments
  hs-source-dirs:
    app
  default-language:
    Haskell2010
