cabal-version: 3.4
name:          unix-tools
version:       0.1.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  HCat

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , terminal-size
    , mtl
    , text
    , bytestring
    , time
    , directory

  hs-source-dirs:   src
  default-language: Haskell2010

executable hcat
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , unix-tools
    , terminal-size

  hs-source-dirs:   hcat
  default-language: Haskell2010

--test-suite unix-tools-test
--  import:           warnings
--  default-language: Haskell2010
--
--  -- other-modules:
--  -- other-extensions:
--  type:             exitcode-stdio-1.0
--  hs-source-dirs:   test
--  main-is:          Main.hs
--  build-depends:
--    , base
--    , unix-tools
