cabal-version: 3.4
name:          unix-tools
version:       0.1.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    HLess
    Utils

  -- other-modules:
  -- other-extensions:
  ghc-options:      -O1 -Wall
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base
    , bytestring
    , directory
    , ListZipper
    , mtl
    , terminal-size
    , text
    , time
    , containers

executable hless
  import:           warnings
  main-is:          Main.hs
  ghc-options:      -O1 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   hless
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , unix-tools

--test-suite unix-tools-test
--  import:           warnings
--  default-language: Haskell2010
--
--  -- other-modules:
--  -- other-extensions:
--  type:             exitcode-stdio-1.0
--  hs-source-dirs:   test
--  main-is:          Main.hs
--  build-depends:
--    , base
--    , unix-tools
